Persist per-symbol price history and prepare Docker volume